--- a/Instructions/StarterCode/index.html
+++ b/Instructions/StarterCode/index.html
@@ -48,6 +48,10 @@
                         <input class="form-control" id="state" type="text" placeholder="CA">
                       </li>
                       <li class="filter list-group-item">
+                        <label for="shape">Enter the Shape</label>
+                        <input class="form-control" id="shape" type="text" placeholder="Circle">
+                      </li>
+                      <li class="filter list-group-item">
                         <label for="country">Select the Country</label><br>
                         <input type="radio" name="country" value="us" checked> US<br>
                         <input type="radio" name="country" value="ca"> CA<br>
